[gd_scene load_steps=3 format=3 uid="uid://eve0n62ubtrx"]

[ext_resource type="Script" path="res://scenes/ui/ProjectEditor/PipePropertyEditor/PipePropertyEditor.gd" id="1_s3ent"]
[ext_resource type="PackedScene" uid="uid://tgnf3tq05nsl" path="res://scenes/ui/widgets/BlinkLabel/BlinkLabel.tscn" id="2_31q04"]

[node name="PipePropertyEditor" type="PanelContainer"]
anchors_preset = -1
anchor_right = 0.297
anchor_bottom = 0.825
offset_right = -0.167007
offset_bottom = -3.05176e-05
script = ExtResource("1_s3ent")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PropertiesList" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/PropertiesList"]
layout_mode = 2
text = "Label:"

[node name="UserLabelLineEdit" type="LineEdit" parent="VBoxContainer/PropertiesList"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "User-definable label for this sprinkler"

[node name="Label11" type="Label" parent="VBoxContainer/PropertiesList"]
layout_mode = 2
text = "Diameter:"

[node name="DiameterSpinBox" type="SpinBox" parent="VBoxContainer/PropertiesList"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The pipe's inner wall diameter (in inches)."
step = 0.01
value = 0.5
suffix = "in"

[node name="Label9" type="Label" parent="VBoxContainer/PropertiesList"]
layout_mode = 2
text = "Flow Source:"

[node name="FlowSourceCheckBox" type="CheckBox" parent="VBoxContainer/PropertiesList"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Check this to make the pipe a water source. Typically, only 1 pipe should be set as the flow source, and the rest will feed from it."

[node name="SrcPressureLabel" type="Label" parent="VBoxContainer/PropertiesList"]
visible = false
layout_mode = 2
text = "Src. Pressure:"

[node name="SrcPressureSpinBox" type="SpinBox" parent="VBoxContainer/PropertiesList"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The fluid's nominal pressure (in pounds per sq. inch) at the source of the pipe."
max_value = 300.0
step = 0.01
value = 60.0
suffix = "psi"

[node name="SrcFlowRateLabel" type="Label" parent="VBoxContainer/PropertiesList"]
visible = false
layout_mode = 2
text = "Src. Flow Rate:"

[node name="SrcFlowRateSpinBox" type="SpinBox" parent="VBoxContainer/PropertiesList"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The fluid's nominal flow rate (in gallons per minute) at the source of the pipe."
max_value = 300.0
step = 0.01
value = 60.0
suffix = "gpm"

[node name="MaterialLabel" type="Label" parent="VBoxContainer/PropertiesList"]
layout_mode = 2
text = "Material:"

[node name="MaterialOption" type="OptionButton" parent="VBoxContainer/PropertiesList"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The fluid's nominal flow rate (in gallons per minute) at the source of the pipe."

[node name="Label10" type="Label" parent="VBoxContainer/PropertiesList"]
layout_mode = 2
text = "Color:"

[node name="PipeColorPicker" type="ColorPickerButton" parent="VBoxContainer/PropertiesList"]
layout_mode = 2

[node name="MultiEditWarning" parent="VBoxContainer" instance=ExtResource("2_31q04")]
visible = false
layout_mode = 2

[connection signal="text_submitted" from="VBoxContainer/PropertiesList/UserLabelLineEdit" to="." method="_on_user_label_line_edit_text_submitted"]
[connection signal="value_changed" from="VBoxContainer/PropertiesList/DiameterSpinBox" to="." method="_on_diameter_spin_box_value_changed"]
[connection signal="toggled" from="VBoxContainer/PropertiesList/FlowSourceCheckBox" to="." method="_on_flow_source_check_box_toggled"]
[connection signal="value_changed" from="VBoxContainer/PropertiesList/SrcPressureSpinBox" to="." method="_on_src_pressure_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/PropertiesList/SrcFlowRateSpinBox" to="." method="_on_src_flow_rate_spin_box_value_changed"]
[connection signal="item_selected" from="VBoxContainer/PropertiesList/MaterialOption" to="." method="_on_material_option_item_selected"]
[connection signal="color_changed" from="VBoxContainer/PropertiesList/PipeColorPicker" to="." method="_on_pipe_color_picker_color_changed"]
[connection signal="popup_closed" from="VBoxContainer/PropertiesList/PipeColorPicker" to="." method="_on_pipe_color_picker_popup_closed"]
[connection signal="pressed" from="VBoxContainer/PropertiesList/PipeColorPicker" to="." method="_on_pipe_color_picker_pressed"]
